# stock-analysis-agent-langgraph

./: get_data_node.ipynb  hello.py  main.ipynb  main.py  mainv2.ipynb  pyproject.toml  readme.md  requirements.txt  test.ipynb
data/: Nasdaq-100.csv  mnst_performance_in_the_past_10_days.csv  mnst_performance_in_the_past_1_days.csv  mnst_performance_in_the_past_5_days.csv  past_days_performance.csv
noteboks/: basic-langgraph.ipynb  download_nasdaq100.ipynb  python_code_executor.ipynb
src/: utils.py  utils_email.py  utils_news.py  utils_stock.py
